encoding/jsonschema/testdata/txtar/crd_properties_with_additionalproperties.txtar
#version: k8sCRD

-- schema.json --
{
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
        "name": "myapps.example.com"
    },
    "spec": {
        "group": "example.com",
        "scope": "Namespaced",
        "names": {
            "kind": "MyApp",
            "singular": "myapp",
            "plural": "myapps"
        },
        "versions": [
            {
                "name": "v1",
                "served": true,
                "storage": true,
                "schema": {
                    "openAPIV3Schema": {
                        "type": "object",
                        "properties": {
                            "spec": {
                                "type": "object",
                                "x-kubernetes-preserve-unknown-fields": true
                            }
                        },
                        "additionalProperties": {
                            "type": "string"
                        }
                    }
                }
            }
        ]
    }
}

-- out/decode/extract --
ERROR:
additionalProperties may not be combined with properties in Kubernetes CRD:
    schema.json:21:21
-- out/decodeCRD/extractCRD/error --
additionalProperties may not be combined with properties in Kubernetes CRD
-- out/decodeCRD-v3/extractCRD/error --
additionalProperties may not be combined with properties in Kubernetes CRD
-- out/decode-v3-noshare/extract --
ERROR:
additionalProperties may not be combined with properties in Kubernetes CRD:
    schema.json:21:21
